--- a/o3o/DMElement.xaml
+++ b/o3o/DMElement.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="110" d:DesignWidth="360" Loaded="UserControl_Loaded" Name="DmElement" >
+             d:DesignHeight="110" d:DesignWidth="350" Height="110"  Loaded="UserControl_Loaded" MouseEnter="UserControl_MouseEnter" MouseLeave="UserControl_MouseLeave" Name="tweetElement">
     <UserControl.Resources>
         <Style TargetType="TextBlock" x:Key="glassText">
             <Setter Property="Foreground" Value="Black" />
@@ -32,33 +32,43 @@
         </Style>
     </UserControl.Resources>
 
-    <Grid Width="360" Height="110" Name="tweetelementgrid">
+    <Grid Width="350" Height="110" Name="tweetelementgrid">
 
-        <TextBlock MouseRightButtonUp="TweetBlock_MouseRightButtonDown" Name="TweetBlock" Height="65" HorizontalAlignment="Left" Margin="52,24,0,0" Text="Text" VerticalAlignment="Top" Width="304" Foreground="White" Background="Transparent" TextWrapping="Wrap" Padding="0" FontSize="13">
+        <TextBlock MouseRightButtonUp="TweetBlock_MouseRightButtonDown" Name="TweetBlock" Height="65" HorizontalAlignment="Left" Margin="52,24,0,0" Text="text" VerticalAlignment="Top" Width="294" Foreground="White" Background="Transparent" TextWrapping="Wrap" Padding="0" FontSize="13">
             <TextBlock.ContextMenu>
                 <ContextMenu x:Name="contextmenu">
             <MenuItem Header="copy" Click="MenuItem_Click"/>
-        </ContextMenu></TextBlock.ContextMenu><TextBlock.Effect>
+        </ContextMenu></TextBlock.ContextMenu><!--<TextBlock.Effect>
                     <DropShadowEffect ShadowDepth="1" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
-                </TextBlock.Effect>
+                </TextBlock.Effect>-->
         </TextBlock>
-        <TextBlock Text="Label" Height="20" HorizontalAlignment="Left" Margin="113,87,0,0" Name="label1" VerticalAlignment="Top" Foreground="#C2000000" Padding="0,1,0,0" Width="247" ForceCursor="True">
-           
+        <TextBlock TextAlignment="Left" Text="" Height="23" HorizontalAlignment="Left" Margin="156,87,0,0" Name="label1" VerticalAlignment="Top" Foreground="#C2000000" Padding="0,1,0,0" Width="194" ForceCursor="True">
         </TextBlock>
-        <TextBlock MouseDown="datelabel_MouseDown" MouseEnter="datelabel_MouseEnter" MouseLeave="datelabel_MouseLeave" Text="Label" Height="20" HorizontalAlignment="Left" Margin="26, 87, 0, 0" Name="datelabel" VerticalAlignment="Top" Foreground="#C2000000" Padding="0,1,0,0" Width="81" >
+        <TextBlock MouseDown="datelabel_MouseDown" MouseEnter="datelabel_MouseEnter" MouseLeave="datelabel_MouseLeave" Text="-" Height="17" HorizontalAlignment="Right" Margin="0,7,6,0" Name="datelabel" VerticalAlignment="Top" Foreground="#64FFFFFF" Padding="0,1,0,0" Width="109" FontSize="11" TextAlignment="Right">
+        </TextBlock>
 
-        </TextBlock>
+
+
+        <Border Name="replyimageborder" Width="16" Height="16" Margin="331,90,0,0" VerticalAlignment="Top" HorizontalAlignment="Left">
+            <Border.Effect>
+                <DropShadowEffect Color="White" Direction="-45"
+                    ShadowDepth="0" BlurRadius="6" Opacity="0.7"/>
+            </Border.Effect>
+            <Image MouseEnter="replyBtn_MouseEnter" MouseLeave="replyBtn_MouseLeave" MouseDown="replyBtn_MouseDown" Visibility="Visible" Height="16"  Name="replyBtn" Stretch="Fill" VerticalAlignment="Top" Source="/o3o;component/Images/empty.png" Cursor="Hand" HorizontalAlignment="Left" Width="16" />
+        </Border>
+
+
         <Border Name="imageborder" Width="48" Height="48" Margin="0,11,0,0" VerticalAlignment="Top" HorizontalAlignment="Left">
             <Border.Effect>
                 <DropShadowEffect Color="Black" Direction="-45"
                     ShadowDepth="4" BlurRadius="10" Opacity="0.5"/>
             </Border.Effect>
-            <Image MouseDown="AtNameLabel_MouseDown" MouseEnter="linkMouseEnter" MouseLeave="linkMouseLeave" Height="48"  Name="tweetImg" Stretch="Fill"  Width="48" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Source="/o3o;component/Images/image_Failed.png" ImageFailed="tweetImg_ImageFailed" />
+            <Image MouseDown="AtNameLabel_MouseDown" MouseEnter="linkMouseEnter" MouseLeave="linkMouseLeave" Height="48"  Name="tweetImg" Stretch="Fill"  Width="48" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Source="/o3o;component/Images/Loading.png" ImageFailed="tweetImg_ImageFailed" />
         </Border>
 
-        <TextBlock MouseDown="AtNameLabel_MouseDown" MouseEnter="linkMouseEnter" MouseLeave="linkMouseLeave" Text="Name" Height="17" HorizontalAlignment="Left" Margin="52,7,0,0" Name="NameLabel" VerticalAlignment="Top" Foreground="White" Padding="0" Width="122" FontStyle="Normal" FontWeight="SemiBold" FontSize="12">
+        <TextBlock MouseDown="AtNameLabel_MouseDown" MouseEnter="linkMouseEnter" MouseLeave="linkMouseLeave" Text="Name" Height="17" HorizontalAlignment="Left" Margin="52,7,0,0" Name="NameLabel" VerticalAlignment="Top" Foreground="White" Padding="0" Width="177" FontStyle="Normal" FontWeight="SemiBold" FontSize="12">
         </TextBlock>
-        <TextBlock MouseDown="AtNameLabel_MouseDown" MouseEnter="linkMouseEnter" MouseLeave="linkMouseLeave" Text="@name" Height="17" Margin="0,7,12,0" Name="AtNameLabel" VerticalAlignment="Top" Foreground="#E3FFFFFF" Padding="0" HorizontalAlignment="Right" Width="113" FontSize="11">
+        <TextBlock MouseDown="AtNameLabel_MouseDown" MouseEnter="linkMouseEnter" MouseLeave="linkMouseLeave" Text="@name" Height="20" Margin="26,87,0,0" Name="AtNameLabel" VerticalAlignment="Top" Foreground="#C2000000" Padding="0" HorizontalAlignment="Left" Width="130" FontSize="12">
         </TextBlock>
     </Grid>
 
